--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -8,6 +8,9 @@ doctrine:
 
         profiling_collect_backtrace: '%kernel.debug%'
         use_savepoints: true
+        types:
+            uuid: App\Utils\Infrastructure\Doctrine\Type\UuidType
+            email: App\Utils\Infrastructure\Doctrine\Type\EmailType
     orm:
         auto_generate_proxy_classes: true
         enable_lazy_ghost_objects: true
@@ -16,12 +19,10 @@ doctrine:
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
         mappings:
-            App:
-                type: attribute
-                is_bundle: false
-                dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity'
-                alias: App
+            User:
+                type: xml
+                dir: '%kernel.project_dir%/src/User/Infrastructure/Doctrine/Mapping'
+                prefix: App\User\Domain\Entity
 
 when@test:
     doctrine:
