--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,5 @@
 auth_controllers:
     resource:
         path: ../src/User/Infrastructure/Controller
-        namespace: App\Auth\Presentation\Controller
+        namespace: App\User\Infrastructure\Controller
     type: attribute
