--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,6 +45,20 @@ services:
       - database
     networks:
       - app
+  rserver:
+    image: redis:latest
+    restart: always
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./.redis/root:/root/redis
+      - ./redis.conf:/etc/redis/redis.conf
+    environment:
+      - REDIS_PASSWORD=root
+      - REDIS_PORT=6379
+      - REDIS_DATABASES=16
+    networks:
+      - app
 networks:
   app:
     driver: bridge
