--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,10 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    jwt:
+        key_file_path: '%kernel.project_dir%/keys/private.pem'
+        access_lifetime: '7 days'
+        refresh_lifetime: '1 month'
 
 services:
     # default configuration for services in *this* file
@@ -22,3 +26,5 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\User\Infrastructure\Helper\JWT:
+        arguments: ['%jwt%']
