--- a/config/services.yaml
+++ b/config/services.yaml
@@ -28,3 +28,5 @@ services:
     # please note that last definitions always *replace* previous ones
     App\User\Infrastructure\Helper\JWT:
         arguments: ['%jwt%']
+    App\User\Application\Bus\Handler\OnEmailConfirmationRefreshedHandler:
+        tags: [messenger.message_handler]
